Fix dark mode for index card

--- a/source/css/gsoc.styl
+++ b/source/css/gsoc.styl
@@ -11,3 +11,10 @@
     border-radius: 0.5em
     background-color: #e5e2f1
     transition: all 0.2s ease-in-out
+
+[data-user-color-scheme=dark] .gsoc
+  .index-card
+    // set round corners
+    background-color: #403b5f
+  .index-card:hover
+    background-color: #4c3d6f
